--- a/src/components/publications/PublicationList.css
+++ b/src/components/publications/PublicationList.css
@@ -1,8 +1,9 @@
 .publication-list {
+    margin-top: 1em;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-gap: 10px;
-    grid-auto-rows: 300px;
+    grid-template-columns: repeat(auto-fill, minmax(20em, 1fr));
+    grid-gap: 1em;
+    grid-auto-rows: 15em;
 }
 
 .ui.card:first-child {
