--- a/src/components/publicationcard/PublicationCard.css
+++ b/src/components/publicationcard/PublicationCard.css
@@ -2,10 +2,14 @@
     color: blue;
 }
 
-.tags-text{
-    margin-left: 1em;
+.tags-text {
+    margin-left: 0.8em;
 }
 
-.render-tags{
+.render-tags {
     margin-right: 0.2em;
+}
+
+.publication-card {
+    height: 100%;
 }
