--- a/src/components/publicationinfo/PublicationInfo.css
+++ b/src/components/publicationinfo/PublicationInfo.css
@@ -14,7 +14,5 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 10px 0;
-    padding: 10px;
-    max-width: 10px;
+    overflow-y: hidden;
 }
