--- a/src/components/publications/PublicationList.css
+++ b/src/components/publications/PublicationList.css
@@ -18,3 +18,9 @@
     text-align: right;
     margin-top: -2.5em;
 }
+
+.pagination {
+    margin-top: 1em;
+    margin-left: auto;
+    margin-right: auto;
+}
