--- a/src/components/publicationinfo/PublicationInfoTotal.css
+++ b/src/components/publicationinfo/PublicationInfoTotal.css
@@ -1,3 +1,34 @@
+.feedback-form {
+    width: 40%;
+    position: fixed;
+    right: 1em;
+    bottom: 1em;
+    z-index: 100;
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 1em;
+}
+
+.create-form {
+    width: 93%;
+    margin-left: 1.5em;
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+    margin-right: 1.5em;
+}
+
+.feedback-card {
+    margin-bottom: 1em;
+}
+
+.rating {
+    color: yellow;
+}
+
+.star {
+    cursor: pointer;
+}
+
 .loading {
     margin-left: 50%;
     margin-top: 40%;
