--- a/src/modules/publications/publicationlist/PublicationTotal.css
+++ b/src/modules/publications/publicationlist/PublicationTotal.css
@@ -21,8 +21,7 @@
 
 .paginator {
     margin-top: 1em;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0px auto;
 }
 
 .publication-form {
