--- a/src/modules/publications/publicationlist/PublicationTotal.css
+++ b/src/modules/publications/publicationlist/PublicationTotal.css
@@ -19,9 +19,10 @@
     margin-top: -2.5em;
 }
 
-.paginator {
+.pagination {
     margin-top: 1em;
-    margin: 0px auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .publication-form {
