--- a/src/modules/publications/list/components/PublicationTotal.css
+++ b/src/modules/publications/list/components/PublicationTotal.css
@@ -36,6 +36,22 @@
     border-radius: 1em;
 }
 
+.publication-add {
+    position: fixed;
+    z-index: 100;
+    bottom: 1em;
+    right: 22%;
+}
+
+.add-button {
+    width: 70px;
+    height: 70px;
+    padding: 10px 16px;
+    border-radius: 35px;
+    font-size: 24px;
+    line-height: 1.33;
+}
+
 .publication-created {
     position: fixed;
     bottom: 1em;
