--- a/src/modules/auth/login/components/Login.css
+++ b/src/modules/auth/login/components/Login.css
@@ -6,3 +6,12 @@
     float: right;
     margin-right: 1em;
 }
+
+.login-form {
+    position: fixed;
+    top: 2em;
+    left: 35%;
+    width: 25em;
+    text-align: center;
+    align-content: center;
+}
