--- a/src/modules/profiles/user/components/ProfileTotal.css
+++ b/src/modules/profiles/user/components/ProfileTotal.css
@@ -1,3 +1,18 @@
+.profile-container {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: start;
+    align-items: center;
+}
+
+.profile {
+    margin-top: 1em;
+    width: 60%;
+}
+
 .profile-icon {
     margin-top: 1em;
     margin-right: 1em;
