--- a/src/modules/publications/detail/components/PublicationInfoTotal.css
+++ b/src/modules/publications/detail/components/PublicationInfoTotal.css
@@ -1,3 +1,31 @@
+.publication-details-container {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.publication-details {
+    width: 60%;
+}
+
+.publication-feedbacks-container {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.publication-feedbacks {
+    width: 60%;
+}
+
 .feedback-form {
     width: 40%;
     position: fixed;
