--- a/src/modules/rankings/components/RankingDetails.css
+++ b/src/modules/rankings/components/RankingDetails.css
@@ -15,3 +15,18 @@
     grid-template-columns: repeat(auto-fill, minmax(20em, 1fr));
     grid-gap: 1em;
 }
+
+.ranking-container{
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.ranking-list {
+    margin-top: 1em;
+    width: 60%;
+}
